--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,15 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+
+# pkgdown site
+docs/
+
+# translation temp files
+po/*~
+
+*.aux
+*.nav
+*.snm
+*.toc
+*.vrb
